Get OICD login to work with Django forms
